# fabr_test

./: README.md  fabr_test.postman_collection.json
backend/: pyproject.toml  requirements.txt
backend/backend/: settings.py  urls.py
backend/survey/: admin.py  models.py  serializers.py  views.py
backend/survey/migrations/: 0001_initial.py  0002_auto_20200707_0114.py  0002_auto_20200710_2244.py  0003_auto_20200707_0238.py
